Bug 380857: work around lack of void strings in frozen string API by avoiding the use of nsILoginInfo::Init() (re-enable IE password migration), patch by Justin Dolske <dolske@mozilla.com>, r=me